--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,7 @@
     tools:context="com.padc.recipes.HomeActivityFragment">
 
     <TextView
-        android:text="Hello World!"
+        android:text="Hello World! test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
