--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:showIn="@layout/activity_home"
-    tools:context="com.padc.recipes.HomeActivityFragment">
+    tools:context=".fragments.HomeActivityFragment">
 
     <TextView
         android:text="Hello World!"
