--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,6 +15,13 @@
     <dimen name="margin_large">24dp</dimen>
     <dimen name="margin_xlarge">32dp</dimen>
 
+    <dimen name="padding_small">4dp</dimen>
+    <dimen name="padding_medium">8dp</dimen>
+    <dimen name="padding_medium_2">16dp</dimen>
+    <dimen name="padding_medium_3">18dp</dimen>
+    <dimen name="padding_large">24dp</dimen>
+    <dimen name="padding_xlarge">32dp</dimen>
+
     <dimen name="text_small">12sp</dimen>
     <dimen name="text_regular">14sp</dimen>
     <dimen name="text_regular_2x">16sp</dimen>
@@ -47,4 +54,6 @@
     <dimen name="margin_top_profile_pic">60dp</dimen>
 
     <dimen name="screen_title_size">19sp</dimen>
+    <dimen name="restaurnt_width">100dp</dimen>
+    <dimen name="restaurnt_height">100dp</dimen>
 </resources>
