--- a/app/src/main/res/layout/fragment_restaurant_list.xml
+++ b/app/src/main/res/layout/fragment_restaurant_list.xml
@@ -1,13 +1,19 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/swipe_refresh_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.RestaurantListFragment">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_restaurants"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="restarutnt list" />
+        android:clipToPadding="false"
+        android:paddingBottom="@dimen/padding_bottom_for_fab"
+        android:paddingLeft="@dimen/margin_medium"
+        android:paddingRight="@dimen/margin_medium"
+        android:scrollbarStyle="outsideOverlay" />
 
-</FrameLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
