--- a/app/src/main/res/layout/view_item_restaurnat.xml
+++ b/app/src/main/res/layout/view_item_restaurnat.xml
@@ -30,6 +30,7 @@
             android:layout_toRightOf="@id/iv_restaurant_photo"
             android:lineSpacingMultiplier="1.2"
             android:text="YKKO"
+            android:textColor="@color/primary_text"
             android:textSize="@dimen/text_heading_1x"
             android:textStyle="bold" />
 
@@ -37,10 +38,12 @@
             android:id="@+id/tv_township"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-           android:layout_alignParentBottom="true"
             android:layout_alignBaseline="@id/tv_restaurant_title"
-            android:text="Kamayut" />
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:text="Kamayut"
+            android:textColor="@color/primary_text"
+            android:textSize="@dimen/text_regular_3x" />
 
     </RelativeLayout>
 
