--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -1,9 +1,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".activities.HomeActivity" >
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
+    tools:context=".activities.HomeActivity">
+    <item
+        android:id="@+id/spinner_filter_category"
+        android:orderInCategory="90"
+        android:title="@string/lbl_spinner_filter_category"
+        android:visible="false"
+        app:actionViewClass="android.widget.Spinner"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_restaurant_search"
+        android:icon="@drawable/ic_search_white_24dp"
+        android:orderInCategory="90"
+        android:title="@string/lbl_search"
+        android:visible="false"
+        app:showAsAction="ifRoom|collapseActionView" />
 </menu>
