--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#03A9F4</color>
-    <color name="primary_dark">#0288D1</color>
-    <color name="primary_light">#B3E5FC</color>
-    <color name="accent">#FF4081</color>
+    <color name="primary">#EF6C00</color>
+    <color name="primary_dark">#E65100</color>
+    <color name="primary_light">#FB8C00</color>
+    <color name="accent">#9CCC65</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#727272</color>
     <color name="icons">#FFFFFF</color>
@@ -26,6 +26,7 @@
     <!-- overlays -->
     <color name="black_overlay">#9000</color>
     <color name="black_overlay_light">#6000</color>
+    <color name="viewBg">#f1f5f8</color>
 
 
 </resources>
