Shopping List finished

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -66,4 +66,5 @@
     <dimen name="backdrop_title">30dp</dimen>
     <dimen name="backdrop_subtitle">18dp</dimen>
     <dimen name="overflow_favrite_margin">-30dp</dimen>
+    <dimen name="zero_width">0dp</dimen>
 </resources>
