--- a/app/src/main/res/menu/left_menu.xml
+++ b/app/src/main/res/menu/left_menu.xml
@@ -24,7 +24,7 @@
             android:title="@string/Video" />
 
         <item
-            android:id="@+id/myanmar_attractions_notification"
+            android:id="@+id/shoppingList"
             android:icon="@drawable/ic_notifications_active_24dp"
             android:title="@string/ShoppingList" />
 
