Finished 	tile of the toolbar         Button remove move to bottom

--- a/app/src/main/res/layout/view_item_township.xml
+++ b/app/src/main/res/layout/view_item_township.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/margin_medium">
+    android:layout_marginBottom="@dimen/margin_medium_2"
+    android:padding="@dimen/margin_medium_2">
 
     <com.padc.recipes.components.MMTextView
         android:id="@+id/tv_township"
