--- a/app/src/main/res/layout/view_item_shopping_list.xml
+++ b/app/src/main/res/layout/view_item_shopping_list.xml
@@ -22,30 +22,29 @@
 
             <LinearLayout
                 android:id="@+id/ll_tile_remove"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <com.padc.recipes.components.MMTextView
                     android:id="@+id/tv_recipe_title"
-                    android:layout_width="@dimen/zero_width"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left|center_vertical"
-                    android:layout_weight="1"
                     android:ellipsize="end"
-                    android:gravity="left|center_vertical"
                     android:singleLine="true"
                     android:text="အာလူးေခ်ာင္းေျကာ္ (French Fries) (ေအးေနလဲ စားလိုု ့ေကာင္းတဲ့နည္း)"
                     android:textColor="@color/primary"
                     android:textSize="@dimen/text_regular" />
-
-                <com.padc.recipes.components.MMButton
-                    android:id="@+id/tv_cook_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/remove" />
             </LinearLayout>
-
+            <com.padc.recipes.components.MMButton
+                android:id="@+id/tv_cook_time"
+                android:layout_gravity="right"
+                android:layout_marginTop="-40dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/remove" />
 
         </LinearLayout>
+
     </android.support.v7.widget.CardView>
 </LinearLayout>
