--- a/app/src/main/res/layout/activity_recipes_detail_screen.xml
+++ b/app/src/main/res/layout/activity_recipes_detail_screen.xml
@@ -69,7 +69,7 @@
             android:background="#ffffff"
             android:orientation="vertical">
 
-            <TextView
+            <com.padc.recipes.components.MMTextView
                 android:id="@+id/tv_ingredients"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -88,7 +88,7 @@
                 android:layout_marginRight="@dimen/margin_medium"
                 />
 
-            <CheckBox
+            <com.padc.recipes.components.MMCheckBox
                 android:id="@+id/chk1"
                 android:layout_marginLeft="@dimen/margin_medium_2"
                 android:layout_marginRight="@dimen/margin_medium_2"
@@ -98,7 +98,7 @@
                 android:layout_height="wrap_content"
                 android:text="ပုဇြန္ - ၂၅ က်ပ္သား(ေခါင္းပါေသာပုဇြန္ ကိုသုံးလွ်င္ ပိုစားေကာင္းပါသည္။)(သို ့)ဂဏာန္း - ၂ေကာင္" />
 
-            <CheckBox
+            <com.padc.recipes.components.MMCheckBox
                 android:id="@+id/chk2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -107,7 +107,7 @@
                 android:layout_marginBottom="@dimen/margin_medium_2"
                 android:text="ဆား-လက္ဖက္ရည္ဇြန္း ေလးပုံ ၃ပုံ နွင့္ ျကက္သြန္ျဖဴ မွုန္ ့-လက္ဖက္ရည္ဇြန္း ေလးပုံတပုံ" />
 
-            <CheckBox
+            <com.padc.recipes.components.MMCheckBox
                 android:id="@+id/chk3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -116,7 +116,7 @@
                 android:layout_marginBottom="@dimen/margin_medium_2"
                 android:text="ငရုတ္ေဆာ့ - လက္ဖက္ရည္ဇြန္း ၁ ဇြန္"/>
 
-            <CheckBox
+            <com.padc.recipes.components.MMCheckBox
                 android:id="@+id/chk4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -125,7 +125,7 @@
                 android:layout_marginBottom="@dimen/margin_medium_2"
                 android:text="အေရာင္တင္မွုန္ ့(paprika) - လက္ဖက္ရည္ဇြန္း ၁ ဇြန္း"/>
 
-            <CheckBox
+            <com.padc.recipes.components.MMCheckBox
                 android:id="@+id/chk5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -134,7 +134,7 @@
                 android:layout_marginBottom="@dimen/margin_medium_2"
                 android:text="ျကက္သြန္ျဖဴ - ၃ တက္ (ေတာက္ေတာက္စင္းထားပါ။)"/>
 
-            <CheckBox
+            <com.padc.recipes.components.MMCheckBox
                 android:id="@+id/chk6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -143,7 +143,7 @@
                 android:layout_marginBottom="@dimen/margin_medium_2"
                 android:text="သံပုရာသီး - ၁ ျခမ္း"/>
 
-            <CheckBox
+            <com.padc.recipes.components.MMCheckBox
                 android:id="@+id/chk7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -167,14 +167,14 @@
                 android:layout_marginTop="@dimen/margin_medium"
                 android:layout_marginBottom="@dimen/margin_medium">
 
-                <Button
+                <com.padc.recipes.components.MMButton
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/height_xlarge"
                     android:text="ေစ်း၀ယ္စာရင္းသို႕ ထည့္ရန္"
                     android:layout_marginLeft="@dimen/margin_medium_2"
                     />
 
-                <Button
+                <com.padc.recipes.components.MMButton
                     android:layout_width="wrap_content"
                     android:text="စာရင္းမွပယ္ဖ်က္ရန္္"
                     android:layout_height="@dimen/height_xlarge"
@@ -194,7 +194,7 @@
             android:background="#ffffff"
             android:orientation="vertical">
 
-            <TextView
+            <com.padc.recipes.components.MMTextView
                 android:id="@+id/tv_instructions"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -213,7 +213,7 @@
                 android:layout_marginRight="@dimen/margin_medium"
                 />
 
-            <TextView
+            <com.padc.recipes.components.MMTextView
                 android:id="@+id/tv_step1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -223,7 +223,7 @@
                 android:layout_marginBottom="@dimen/margin_medium_2"
                 android:text="အဆင့္(၁)"/>
 
-            <TextView
+            <com.padc.recipes.components.MMTextView
                 android:id="@+id/tv_stepdec1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -232,7 +232,7 @@
                 android:layout_marginBottom="@dimen/margin_medium_2"
                 android:text="ပုဇြန္/ ဂဏာန္း မ်ားျပဳတ္ရန္ အိုးျကီးျကီး တလုံးမွာ ေရေႏြးအိုးတည္ပါ။ ေရေႏြးအိုးထဲတြင္ သံပုရာသီး အ၀ိုင္းလုိက္ ၃ ခုေလာက္ကို ထည့္ရ်္ တည္ပါ။ "/>
 
-            <TextView
+            <com.padc.recipes.components.MMTextView
                 android:id="@+id/tv_step2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -242,7 +242,7 @@
                 android:layout_marginBottom="@dimen/margin_medium_2"
                 android:text="အဆင့္(၂)"/>
 
-            <TextView
+            <com.padc.recipes.components.MMTextView
                 android:id="@+id/tv_stepdec2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -253,7 +253,7 @@
 ဂဏာန္းကို ေတာ့ ၁၀ မိနစ္ခန္ ့ျပဳတ္ပါ။ ျပီးလွ်င္ ဂဏာန္းမ်ားကို ခြာရ်္ သန္ ့၇ွင္းထားပါ။
 "/>
 
-            <TextView
+            <com.padc.recipes.components.MMTextView
                 android:id="@+id/tv_step3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -263,7 +263,7 @@
                 android:layout_marginBottom="@dimen/margin_medium_2"
                 android:text="အဆင့္(၃)"/>
 
-            <TextView
+            <com.padc.recipes.components.MMTextView
                 android:id="@+id/tv_stepdec3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -273,7 +273,7 @@
                 android:text=" ျပဳတ္ျပီး သား ပုဇြန္/ ဂဏာန္းမ်ားကိုအိုးထဲမွ ဆယ္ပါ။ (သံပုရာသီးအဖတ္မ်ားပါဆယ္ပါ။) (ျပဳတ္ထားေသာ အရည္မ်ားကို မသြန္ပစ္ပါနဲ့ )
 "/>
 
-            <TextView
+            <com.padc.recipes.components.MMTextView
                 android:id="@+id/tv_step4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -283,7 +283,7 @@
                 android:layout_marginBottom="@dimen/margin_medium_2"
                 android:text="အဆင့္(၄)"/>
 
-            <TextView
+            <com.padc.recipes.components.MMTextView
                 android:id="@+id/tv_stepdec4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -308,7 +308,7 @@
             android:background="#ffffff"
             android:orientation="vertical">
 
-            <TextView
+            <com.padc.recipes.components.MMTextView
                 android:id="@+id/tv_availableshop"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
