--- a/app/src/main/res/layout/activity_recipes_detail_screen.xml
+++ b/app/src/main/res/layout/activity_recipes_detail_screen.xml
@@ -160,28 +160,19 @@
                 android:layout_marginRight="@dimen/margin_medium"
                 />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="@dimen/margin_medium"
-                android:layout_marginBottom="@dimen/margin_medium">
-
-                <com.padc.recipes.components.MMButton
-                    android:layout_width="wrap_content"
+            <com.padc.recipes.components.MMButton
+                    android:layout_width="@dimen/left_menu_width"
                     android:layout_height="@dimen/height_xlarge"
                     android:text="ေစ်း၀ယ္စာရင္းသို႕ ထည့္ရန္"
-                    android:layout_marginLeft="@dimen/margin_medium_2"
-                    />
+                    android:layout_marginTop="@dimen/margin_medium"
+                    android:layout_marginLeft="@dimen/margin_medium"/>
 
-                <com.padc.recipes.components.MMButton
-                    android:layout_width="wrap_content"
-                    android:text="စာရင္းမွပယ္ဖ်က္ရန္္"
+            <com.padc.recipes.components.MMButton
+                    android:layout_width="@dimen/left_menu_width"
+                    android:text="ေစ်း၀ယ္စာရင္းမွ ပယ္ဖ်က္ရန္္"
                     android:layout_height="@dimen/height_xlarge"
-                    android:layout_marginRight="@dimen/margin_medium_2"/>
-
-
-            </LinearLayout>
+                    android:layout_marginLeft="@dimen/margin_medium"
+                    android:layout_marginBottom="@dimen/margin_medium"/>
         </LinearLayout>
 
         <LinearLayout
@@ -326,68 +317,96 @@
                 android:layout_marginLeft="@dimen/margin_medium"
                 android:layout_marginRight="@dimen/margin_medium"
                 />
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="@dimen/margin_medium_2"
-                android:layout_marginLeft="@dimen/margin_medium_2">
 
-            <ImageView
-                    android:id="@+id/iv_ykko"
-                    android:layout_width="@dimen/image_width"
-                    android:layout_height="@dimen/image_height"
-                android:layout_marginRight="@dimen/margin_medium"
-                    android:scaleType="centerCrop"
-                    tools:src="@drawable/ykko"/>
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="@dimen/margin_medium_2"
+                    android:layout_marginLeft="@dimen/margin_medium_2">
 
-                <ImageView
-                    android:id="@+id/iv_taipot"
-                    android:layout_width="@dimen/image_width"
-                    android:layout_height="@dimen/image_height"
-                    android:layout_marginRight="@dimen/margin_medium"
-                    android:scaleType="centerCrop"
-                    tools:src="@drawable/taipot"/>
-                <ImageView
-                    android:id="@+id/iv_yangon"
-                    android:layout_width="@dimen/image_width"
-                    android:layout_height="@dimen/image_height"
-                    android:layout_marginRight="@dimen/margin_medium"
-                    android:scaleType="centerCrop"
-                    tools:src="@drawable/yangon"/>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/iv_ykko"
+                            android:layout_width="@dimen/image_width"
+                            android:layout_height="@dimen/image_height"
+                            android:layout_marginRight="@dimen/margin_medium"
+                            android:scaleType="centerCrop"
+                            tools:src="@drawable/ykko"/>
+                        <com.padc.recipes.components.MMTextView
+                            android:id="@+id/tv_ykko"
+                            android:layout_width="@dimen/image_width"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="@dimen/margin_medium"
+                            android:text="YKKO" />
+                    </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <ImageView
+                        android:id="@+id/iv_taipot"
+                        android:layout_width="@dimen/image_width"
+                        android:layout_height="@dimen/image_height"
+                        android:layout_marginRight="@dimen/margin_medium"
+                        android:scaleType="centerCrop"
+                        tools:src="@drawable/taipot"/>
+                    <com.padc.recipes.components.MMTextView
+                        android:id="@+id/tv_taipot"
+                        android:layout_width="@dimen/image_width"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/margin_medium"
+                        android:text="Tai Pot" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/iv_yangon"
+                        android:layout_width="@dimen/image_width"
+                        android:layout_height="@dimen/image_height"
+                        android:layout_marginRight="@dimen/margin_medium"
+                        android:scaleType="centerCrop"
+                        tools:src="@drawable/yangon"/>
+                    <com.padc.recipes.components.MMTextView
+                        android:id="@+id/tv_yangongrill"
+                        android:layout_width="@dimen/image_width"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/margin_medium"
+                        android:text="Yangon Grill and Chill" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <ImageView
+                        android:id="@+id/iv_yangon1"
+                        android:layout_width="@dimen/image_width"
+                        android:layout_height="@dimen/image_height"
+                        android:layout_marginRight="@dimen/margin_medium"
+                        android:scaleType="centerCrop"
+                        tools:src="@drawable/yangon"/>
+                    <com.padc.recipes.components.MMTextView
+                        android:id="@+id/tv_yangongrill1"
+                        android:layout_width="@dimen/image_width"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/margin_medium"
+                        android:text="Yangon Grill and Chill" />
+                </LinearLayout>
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="@dimen/margin_medium"
-                android:layout_marginBottom="@dimen/margin_medium"
-                android:layout_marginLeft="@dimen/margin_medium_2">
-
-                <TextView
-                    android:id="@+id/tv_ykko"
-                    android:layout_width="@dimen/image_width"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/margin_medium"
-                    android:text="YKKO" />
-                <TextView
-                    android:id="@+id/tv_taipot"
-                    android:layout_width="@dimen/image_width"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/margin_medium"
-                    android:text="Tai Pot" />
-                <TextView
-                    android:id="@+id/tv_yangongrill"
-                    android:layout_width="@dimen/image_width"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/margin_medium"
-                    android:text="Yangon Grill and Chill" />
-
-            </LinearLayout>
-    </LinearLayout>
+           </HorizontalScrollView>
         </LinearLayout>
-
+        </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
 
