Fix some issues

--- a/app/src/main/res/layout/fragment_recipe_List.xml
+++ b/app/src/main/res/layout/fragment_recipe_List.xml
@@ -35,6 +35,6 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:visibility="visible"
+        android:visibility="gone"
         android:text="@string/reset" />
 </RelativeLayout>
