Finished shopping list added ingredients

--- a/app/src/main/res/layout/activity_recipes_detail_screen.xml
+++ b/app/src/main/res/layout/activity_recipes_detail_screen.xml
@@ -117,6 +117,7 @@
                 </LinearLayout>
 
                 <com.padc.recipes.components.MMButton
+                    android:id="@+id/btn_add_to_shopping_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/margin_medium"
@@ -124,6 +125,7 @@
                     android:text="@string/add_shopping_list" />
 
                 <com.padc.recipes.components.MMButton
+                    android:id="@+id/btn_remove_from_shopping_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_medium"
