--- a/app/src/main/res/layout/activity_resturant_detail_screen.xml
+++ b/app/src/main/res/layout/activity_resturant_detail_screen.xml
@@ -29,7 +29,7 @@
 
 
             <ImageView
-                android:id="@+id/iv_attraction"
+                android:id="@+id/iv_restaurant_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
