--- a/app/src/main/res/layout/view_item_recipe_category.xml
+++ b/app/src/main/res/layout/view_item_recipe_category.xml
@@ -2,14 +2,12 @@
 <com.padc.recipes.views.items.ViewItemRecipeCategory xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="@dimen/margin_medium_2"
-    android:padding="@dimen/margin_medium_2">
+    android:padding="@dimen/margin_medium">
 
     <com.padc.recipes.components.MMTextView
         android:id="@+id/tv_recipe_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:lineSpacingMultiplier="1.2"
         android:textSize="@dimen/text_regular"
         android:layout_gravity="center_vertical"
         android:textColor="@color/black_full" />
