--- a/app/src/main/res/layout/view_item_restaurnat.xml
+++ b/app/src/main/res/layout/view_item_restaurnat.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
+
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
@@ -28,7 +29,7 @@
                 android:layout_height="@dimen/restaurnt_height"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginRight="@dimen/margin_medium_2"
+                android:layout_marginRight="@dimen/margin_medium"
                 android:scaleType="centerCrop"
                 android:src="@drawable/restaurnt_ykko" />
 
@@ -38,70 +39,73 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_toRightOf="@id/iv_restaurant_photo"
-                android:lineSpacingMultiplier="1.2"
-                android:maxLines="2"
                 android:ellipsize="end"
+                android:textColor="@color/text_black_ish"
+                android:maxLines="2"
                 android:text="YKKO"
-                android:textColor="@color/primary"
                 android:textSize="@dimen/text_regular"
                 android:textStyle="bold" />
-
-            <com.padc.recipes.components.MMTextView
-                android:id="@+id/tv_address"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_restaurant_title"
-                android:layout_toRightOf="@id/iv_restaurant_photo"
-                android:maxLines="1"
-                android:ellipsize="end"
-                android:text="နံပါတ္ ၁၀ သစ်စာလမ္း, ရန္ကင္း မြိဒံန၊္, ရန္ကုန္"
-                android:textColor="@color/black_overlay_light"
-                android:textSize="@dimen/text_regular" />
-
-            <com.padc.recipes.components.MMTextView
-                android:id="@+id/tv_phone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_address"
-                android:layout_toRightOf="@id/iv_restaurant_photo"
-                android:text="951-572 196 , 9977118749"
-                android:maxLines="1"
-                android:ellipsize="end"
-                android:textColor="@color/black_overlay_light"
-                android:textSize="@dimen/text_regular" />
-
 
             <com.padc.recipes.components.MMTextView
                 android:id="@+id/tv_open_close_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tv_phone"
+                android:layout_below="@id/tv_restaurant_title"
                 android:layout_toRightOf="@id/iv_restaurant_photo"
                 android:text="မနက္ ၉:၀၀ မှ ည ၁၀:၀၀ ထိ"
                 android:textColor="@color/black_overlay_light"
-                android:textSize="@dimen/text_regular" />
+                android:textSize="@dimen/text_small" />
+
+
+            <com.padc.recipes.components.MMTextView
+                android:id="@+id/tv_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_open_close_time"
+                android:layout_toRightOf="@id/iv_restaurant_photo"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:text="951-572 196 , 9977118749 ,951-572 196 , 9977118749"
+                android:textColor="@color/black_overlay_light"
+                android:textSize="@dimen/text_small" />
+
+            <com.padc.recipes.components.MMTextView
+                android:id="@+id/tv_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_phone"
+                android:layout_toRightOf="@id/iv_restaurant_photo"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:text="နံပါတ္ ၁၀ သစ်စာလမ္း, ရန္ကင္း မြိဒံန၊္, ရန္ကုန္"
+                android:textColor="@color/black_overlay_light"
+                android:textSize="@dimen/text_small" />
+
 
             <com.padc.recipes.components.MMTextView
                 android:id="@+id/tv_township"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tv_open_close_time"
+                android:layout_below="@id/tv_address"
                 android:layout_toRightOf="@id/iv_restaurant_photo"
                 android:text="ရန္ကင္း"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:textColor="@color/black_overlay_light"
-                android:textSize="@dimen/text_regular" />
+                android:textSize="@dimen/text_small" />
 
 
             <com.padc.recipes.components.MMTextView
                 android:id="@+id/tv_recommended_food"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBaseline="@id/tv_restaurant_title"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
+                android:layout_below="@id/tv_township"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:layout_toRightOf="@id/iv_restaurant_photo"
                 android:text="​ေျကးအိုး"
                 android:textColor="@color/primary"
-                android:textSize="@dimen/text_regular" />
+                android:textSize="@dimen/text_small" />
 
 
         </RelativeLayout>
