--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_videos"
+    <ListView
+        android:id="@+id/android:list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
